vf_drawtext: select YUV color for drawbox() in case YUV colorspace is used

Fix box alpha rendering when a YUV colorspace is selected, in particular
fix trac ticket #763.